    want to request the refreshed data.
  - Removed the ImGuiTestItemInfo::RefCount field since it is now unused,
    and its removal makes it easier to spot cases that might need fixing.
  APOLOGIES FOR THE BREAKING CHANGE.
  PLEASE CONTACT US IF YOU HAVE ISSUES OR FEEDBACK OR ANY QUESTION.
- TestEngine: Fixed a bug and potential crash in ItemDragAndDrop(). (#49)

2024/04/15:
- TestEngine: Added ImGuiTestEngine_UnregisterTest().
- TestEngine: Fixed directory creation for capture save when using IMGUI_USE_WCHAR32.

2024/04/11:
- TestEngine: Better assert on misusage of ComboClick().

2024/03/05:
- TestEngine: Fixed an issue with using DockInto() from one viewport to another.

2024/02/27:
- TestEngine: Added ImGuiTestOpFlags_NoYield support to MouseTeleportToPos(), useful in
  situations where very precise timings are required (e.g. successive frames teleports).

2024/02/26:
- TestEngine: *BREAKING* fixed GetWindowByRef() behaving inconsistently by ignoring
  current SetRef() base reference when non-empty. Most functions expected on windows
  parts, such as WindowMove(), WindowResize(), WindowFocus(), WindowBringToFront(),
  ScrollToXXX(), etc. were affected:
     ctx->SetRef("Window 1"); + ctx->WindowFocus("");          // OK
     ctx->SetRef("Window 1"); + ctx->WindowFocus("//Window1"); // OK
     ctx->SetRef("window 1"); + ctx->WindowFocus("Window1");   // Not OK, previously worked.

2024/02/22:
- TestEngine: fixed MenuCheckAll(), MenuUncheckAll(), MenuActionAll() from trying to
  perform actions on disabled menu items.

2024/02/07:
- TestEngine: fixed ImBuildFindGitBranchName() helper and auto-filling of io.GitBranchName
  when using a detached head. (#42)

2024/01/25:
- TestEngine: Submitting a ImGuiKey_LeftAlt/ImGuiKey_RightAlt, ImGuiKey_LeftShift/ImGuiKey_RightShift,
  ImGuiKey_LeftCtrl/ImGuiKey_RightCtrl, ImGuiKey_LeftSuper/ImGuiKey_RightSuper key interaction
  will submit the equivalent ImGuiMod_XXX mod, as what would happen in a real backend.