@@ -431,6 +431,13 @@ struct IMGUI_API ImGuiTestContext
     void        ItemInputValue(ImGuiTestRef ref, float f);
     void        ItemInputValue(ImGuiTestRef ref, const char* str);
 
+    // Item/Widgets: Helpers to easily read a value by selecting Slider/Drag/Input text, copying into clipboard and parsing it.
+    // - This requires the item to be selectable (we will later provide helpers that works in more general manner)
+    // - Original clipboard value is restored afterward.
+    void        ItemSelectAndReadValue(ImGuiTestRef ref, ImGuiDataType data_type, void* out_data);
+    void        ItemSelectAndReadValue(ImGuiTestRef ref, int* out_v);
+    void        ItemSelectAndReadValue(ImGuiTestRef ref, float* out_v);
+
     // Item/Widgets: Drag and Mouse operations
     void        ItemHold(ImGuiTestRef ref, float time);
     void        ItemHoldForFrames(ImGuiTestRef ref, int frames);
